--- a/AppCoder/templates/pagina/padre.html
+++ b/AppCoder/templates/pagina/padre.html
@@ -9,7 +9,7 @@
        
         <title>
             {% block titulo %}
-            Landing Page - Start Bootstrap Them
+            Inicio
             {% endblock titulo %}
         </title>
         <!-- Favicon-->
@@ -26,13 +26,10 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href={% url "Inicio" %}>Inicio</a>
-                {% comment %} <a class="navbar-brand" href={% url "probando" %}>Probando</a> {% endcomment %}
-                {% comment %} <a class="navbar-brand" href={% url "crear_auto" "Fiat" "Uno" %}>Creacion Auto</a> {% endcomment %}
-                {% comment %} #v2 {% endcomment %}
-                {% comment %} <a class="navbar-brand" href={% url "crear_auto_v2"  %}>Creacion Auto</a>
-                <a class="navbar-brand" href={% url "autos"  %}>Autos</a> {% endcomment %}
-
-                <a class="btn btn-primary" href="#signup">Sign Up</a>
+                <a class="navbar-brand" href={% url "Estudiantes" %}>Estudiantes</a>
+                <a class="navbar-brand" href={% url "Profesores"%}>Profesores</a>
+                <a class="navbar-brand" href={% url "Entregable"%}>Entrega</a>
+                <a class="navbar-brand" href={% url "Cursos"%}>Cursos</a>
             </div>
         </nav> 
         <!-- Masthead-->
@@ -52,14 +49,7 @@
                           
                             <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
                                 <!-- Email address input-->
-                                <div class="row">
-                                    <div class="col">
-                                        <input class="form-control form-control-lg" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
-                                        <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:required">Email Address is required.</div>
-                                        <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
-                                    </div>
-                                    <div class="col-auto"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
-                                </div>
+                                
                                
                                 <div class="d-none" id="submitSuccessMessage">
                                     <div class="text-center mb-3">
