--- a/AppCoder/templates/pagina/profesores.html
+++ b/AppCoder/templates/pagina/profesores.html
@@ -12,3 +12,20 @@ Profesores
 {% block h1_header %}
 Nuestra web intermedia de Django - CoderHouse
 {% endblock h1_header %}
+
+
+{% block contenido %}
+<h1>
+    Formulario - Agregar Profesores
+</h1>
+<form action={% url "Profesores" %} method="POST">
+    {% csrf_token %}
+
+    {{formulario}}
+    <input type="submit" value="Enviar">
+
+
+
+</form>
+
+{% endblock contenido %}
