--- a/AppCoder/templates/pagina/padre.html
+++ b/AppCoder/templates/pagina/padre.html
@@ -30,6 +30,8 @@
                 <a class="navbar-brand" href={% url "Profesores"%}>Profesores</a>
                 <a class="navbar-brand" href={% url "Entregable"%}>Entrega</a>
                 <a class="navbar-brand" href={% url "Cursos"%}>Cursos</a>
+                <a class="navbar-brand" href={% url "VerCursos"%}>Ver Cursos</a>
+
             </div>
         </nav> 
         <!-- Masthead-->
