--- a/AppCoder/templates/pagina/cursos.html
+++ b/AppCoder/templates/pagina/cursos.html
@@ -6,19 +6,22 @@ Cursos
 
 {% block h1_header %}
 Nuestra web intermedia de Django - CoderHouse
+
 {% endblock h1_header %}
 
 {% block contenido %}
-<h1>
-    Formulario - Agregar curso
-</h1>
-<form action= {% url "Cursos" %} method="POST"> 
-     {% csrf_token %}
+<h1>Formulario - Agregar curso</h1>
+<ul>
 
-{{formulario}}
+    <form action= {% url "Cursos" %} method="POST"> 
+         {% csrf_token %}
+    
+    {{formulario}}
+    
+        <input type="submit" value="Enviar">
+        </form>
+        <button class="soft-button" onclick="window.location.href='{% url 'VerCursos' %}'">Ver Cursos</button>   
+    {% comment %} <button onclick="window.location.href='{% url 'VerCursos' %}'">Ver Cursos</button> {% endcomment %}
+</ul>
 
-    <input type="submit" value="Enviar">
-
-
-</form>
 {% endblock contenido %}
